attempting implementation of non-destructive GHA

--- a/.github/workflows/update-content.yml
+++ b/.github/workflows/update-content.yml
@@ -1,6 +1,8 @@
-name: Update Public Content
+name: Update public content
 on:
   push:
+    branches: [main]
+  pull_request:
     branches: [main]
     paths:
       - 'docs/**'
